kubernetes/Exercice1/resources/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      name: webapp
  template:
    metadata:
      name: webapp
      labels:
        name: webapp
    spec:
      containers:
        - name: container-webapp
          image: webapp
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:    
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    name: webapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30005
