kubernetes/Exercice1/resources/first-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first-policy
  spec:
    podSelector:
      matchLabels:
        app: webapp
    
    policyTypes:
      - Ingress
    ingress:
      - from:
        - podSelector:
            matchLabels:
              client: webapp
        ports:
          - protocol: TCP
            port: 80
